optimised font size. Turns out symbol flickering is a chrome only issue

--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -38,7 +38,7 @@
     height: 80%;
   }
   .square {
-    font-size: 23vh;
+    font-size: 22vh;
   }
   .resetButton {
     font-size: 3vh;
